Added erhArt to antworten queries
