# src/routes.ts
@@ -290,6 +290,7 @@ const models: TsoaRoute.Models = {
         "dataType": "refObject",
         "properties": {
             "ids": {"dataType":"array","array":{"dataType":"double"},"required":true},
+            "erhArt": {"dataType":"array","array":{"dataType":"double"}},
             "osmId": {"dataType":"double","required":true},
             "ageLower": {"dataType":"double"},
             "ageUpper": {"dataType":"double"},
